--- a/PublicFolderDBupload.html
+++ b/PublicFolderDBupload.html
@@ -6,6 +6,6 @@
     <link href="css/style.css" rel="stylesheet"/>
   </head>
   <body>
-    <p style="text-align:center;font-variant: small-caps;"><a href="https://www.dropbox.com/request/IhgFEPVAiOYvTXHVu9BZ">Sigue este link si la página no carga.</a></p>
+    <p style="text-align:center;font-variant: small-caps;"><a href="https://www.dropbox.com/request/IhgFEPVAiOYvTXHVu9BZ">Sigue este link si la p&aacute;gina no carga.</a></p>
   </body>
 </html>
