--- a/aboutme.html
+++ b/aboutme.html
@@ -6,22 +6,22 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>About Josué Tonelli-Cueto</title>
-    <meta name="description" content="Biography and self-description of Josué Tonelli-Cueto" />
+    <title>About Josu&eacute; Tonelli-Cueto</title>
+    <meta name="description" content="Biography and self-description of Josu&eacute; Tonelli-Cueto" />
     <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="es_ES" />
     <meta property="og:url" content="https://tonellicueto.xyz/aboutme.html" />
-    <meta property="og:title" content="Josué Tonelli-Cueto: About me" /><!--35char-->
+    <meta property="og:title" content="Josu&eacute; Tonelli-Cueto: About me" /><!--35char-->
     <meta property="og:description" content="Biography and self-description"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM1.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--Twitter metadata-->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@tonellicueto" />
     <meta name="twitter:creator" content="@tonellicueto" />
-    <meta name="twitter:title" content="Josué Tonelli-Cueto: About me" />
-    <meta name="twitter:description" content="Biography and self-description of Josué Tonelli-Cueto." />
+    <meta name="twitter:title" content="Josu&eacute; Tonelli-Cueto: About me" />
+    <meta name="twitter:description" content="Biography and self-description of Josu&eacute; Tonelli-Cueto." />
     <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/josue_tonellicueto_aboutme.JPG" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -37,7 +37,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png"/></a>
+      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png" alt="weblogo"/></a>
 
       <div class="collapse navbar-collapse " id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
@@ -87,19 +87,17 @@
 
     <!--  Main jumbotron for a primary marketing message or call to action  -->
 
-<div class="jumbotron">
+<div class="jumbotron" style="text-align:center;">
       <div class="container">
-        <center>
         <h2 class="display-4">About me</h2>
-        </center>
      </div>
 </div>
 
 
 <div class="container" style="text-align:justify;">
-  <img id="portrait" src="imgs/josue_tonellicueto_aboutme.JPG" alt="Josué Tonelli-Cueto in fron a blackboard holding a piece of chalk" style="float:right;margin-left:1.2em;margin-bottom:1.5em;margin-top:1.5em;" width="40%"/>
+  <img id="portrait" src="imgs/josue_tonellicueto_aboutme.JPG" alt="Josu&eacute; Tonelli-Cueto in fron a blackboard holding a piece of chalk" style="float:right;margin-left:1.2em;margin-bottom:1.5em;margin-top:1.5em;" width="40%"/>
   <p>
-  My name is Josué Tonelli-Cueto. However, this is a small lie. My actual name is Josué Tonelli Cueto. In Spain, it is customary to have two surnames, one being the first one of the father and the other one the first one of the mother. However, to avoid confusion in international contexts, I write my surname with a dash. In this way, it is clear that both words form part of my surname and that none of them is a middle name.
+  My name is Josu&eacute; Tonelli-Cueto. However, this is a small lie. My actual name is Josu&eacute; Tonelli Cueto. In Spain, it is customary to have two surnames, one being the first one of the father and the other one the first one of the mother. However, to avoid confusion in international contexts, I write my surname with a dash. In this way, it is clear that both words form part of my surname and that none of them is a middle name.
   </p>
   <p>
   I am originally from Bilbao, a city of the Basque Country in the north of Spain, although I was born in Santander, another city in the north of Spain. I consider myself from Bilbao because that's the city I grew up in and I was brought up in. Also, as they say in Spanish, &ldquo;the cow is from where it grazes&rdquo; and &ldquo;people from Bilbao are born wherever they want.&rdquo;
@@ -114,13 +112,13 @@
   Academic biography
   </h3>
   <p>
-  I studied the Licenciatura en Matemáticas, which is a five-year bachelor in mathematics, at the University of the Basque Country between 2009 and 2014. During my studies, I founded and edited, together with Ricardo Grande and the help of Marta Macho-Stadler, the magazine $\pi kasle$. This magazine was a magazine about popular mathematics written by students.  Also, I participated in the debating club of the university.
+  I studied the Licenciatura en Matem&aacute;ticas, which is a five-year bachelor in mathematics, at the University of the Basque Country between 2009 and 2014. During my studies, I founded and edited, together with Ricardo Grande and the help of Marta Macho-Stadler, the magazine $\pi kasle$. This magazine was a magazine about popular mathematics written by students.  Also, I participated in the debating club of the university.
   </p>
   <p>
-  Additionally, during my studies, I was lucky enough to be given further opportunities to pursue further my mathematical interests. In 2011 and 2012, I attended the Undergraduate Summer Program of the Park City Mathematics Institute, thanks to grants provided to me by the program. In 2013, I could enjoy a summer undergraduate research experience at the ICMAT in Madrid under the supervision of Andrei Jaikin-Zapirain, thanks to a scholarship of the Spanish Government. And, in 2014, I enjoyed another undergraduate research experience at the University of the Basque Country under the supervision of Gustavo Adolfo Fernández Alcober, thanks to a scholarship of the Basque Government.
+  Additionally, during my studies, I was lucky enough to be given further opportunities to pursue further my mathematical interests. In 2011 and 2012, I attended the Undergraduate Summer Program of the Park City Mathematics Institute, thanks to grants provided to me by the program. In 2013, I could enjoy a summer undergraduate research experience at the ICMAT in Madrid under the supervision of Andrei Jaikin-Zapirain, thanks to a scholarship of the Spanish Government. And, in 2014, I enjoyed another undergraduate research experience at the University of the Basque Country under the supervision of Gustavo Adolfo Fern&aacute;ndez Alcober, thanks to a scholarship of the Basque Government.
   </p>
   <p>
-  In 2014, I joined the Berlin Mathematical School, a joint graduate program in mathematics of the three Berlin universities, as a Phase I student (i.e., a master student) thanks to a scholarship of &rdquo;la Caixa&rdquo; Foundation and the German Academic Exchange Service (DAAD). In 2016, after completing the Qualifying Exam of the BMS, I became a Phase II student. In 2017, I concluded the Master in Mathematics at the Technische Universität Berlin, after writing my master's thesis under the supervision of Peter Bürgisser. That same year, I became a PhD student of Peter Bürgisser and Felipe Cucker at the Technische Universität Berlin, thanks to a doctoral fellowship funded by the Einstein Foundation Berlin. In 2019, I successfully defended my PhD thesis on the 28th of November and became a doctor.
+  In 2014, I joined the Berlin Mathematical School, a joint graduate program in mathematics of the three Berlin universities, as a Phase I student (i.e., a master student) thanks to a scholarship of &rdquo;la Caixa&rdquo; Foundation and the German Academic Exchange Service (DAAD). In 2016, after completing the Qualifying Exam of the BMS, I became a Phase II student. In 2017, I concluded the Master in Mathematics at the Technische Universit&auml;t Berlin, after writing my master's thesis under the supervision of Peter B&uuml;rgisser. That same year, I became a PhD student of Peter B&uuml;rgisser and Felipe Cucker at the Technische Universit&auml;t Berlin, thanks to a doctoral fellowship funded by the Einstein Foundation Berlin. In 2019, I successfully defended my PhD thesis on the 28th of November and became a doctor.
   </p>
   <p>
   During my stay at BMS, I have participated actively in the life of the school. During 2017, I was a BMS Student Representative; in 2018, I organized the BMS Student Conference, together with my fellow student representatives; and, since 2016 until the end of my studies, I was participating in the organization of the &ldquo;What is...?&rdquo; Seminar.
@@ -135,7 +133,7 @@
 
 <footer>
 <hr>
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
+    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> Code of the webpage created through the art of copying, pasting, editing and crossing fingers&emsp;&emsp;</span></p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
