--- a/arXiv.html
+++ b/arXiv.html
@@ -6,14 +6,14 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josué Tonelli-Cueto: arXiv preprints</title>
-    <meta name="description" content="Complete list of the arXiv preprints (co)authored by Josué Tonelli-Cueto" />
+    <title>Josu&eacute; Tonelli-Cueto: arXiv preprints</title>
+    <meta name="description" content="Complete list of the arXiv preprints (co)authored by Josu&eacute; Tonelli-Cueto" />
     <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="es_ES" />
     <meta property="og:url" content="https://tonellicueto.xyz/arXiv.html" />
-    <meta property="og:title" content="Josué Tonelli-Cueto: arXiv papers" /><!--35char-->
+    <meta property="og:title" content="Josu&eacute; Tonelli-Cueto: arXiv papers" /><!--35char-->
     <meta property="og:description" content="Complete list of arXiv papers"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM0.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--  Bootstrap core CSS  -->
@@ -69,7 +69,7 @@
       script.src = url;
       head.appendChild(script);
     }
-    
+
     if (screen.width <= 699) {
       loadScript("js/arxiv_phone.js");
     } else {
@@ -84,7 +84,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png"/></a>
+      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png" alt="weblogo"/></a>
 
       <div class="collapse navbar-collapse " id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
@@ -132,11 +132,11 @@
 
     <!--  Main jumbotron for a primary marketing message or call to action  -->
 
-<div class="jumbotron">
+<div class="jumbotron" style="text-align:center;">
       <div class="container">
-        <center>
-        <h2 class="display-4">arXiv Preprints of Josué Tonelli-Cueto</h2>
-        </center>
+
+        <h2 class="display-4">arXiv Preprints of Josu&eacute; Tonelli-Cueto</h2>
+
      </div>
 </div>
 
@@ -149,7 +149,7 @@ This list is powered by my <a href="https://arxiv.org/a/tonellicueto_j_1.html">a
 </div>
 <footer>
 <hr>
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
+    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> Code of the webpage created through the art of copying, pasting, editing and crossing fingers&emsp;&emsp;</span></p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
