--- a/arXiv_es.html
+++ b/arXiv_es.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <!-- Microdata markup added by Google Structured Data Markup Helper. -->
-<html lang="en"><head>
+<html lang="es"><head>
     <meta charset="utf-8"/>
     <link rel="icon" href="./imgs/logo.png"/>
     <meta name="google" content="notranslate"/>
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josué Tonelli Cueto: arXiv preprints</title>
-    <meta name="description" content="Lista completa de preprints (co)escritos por Josué Tonelli-Cueto" />
+    <title>Josu&eacute; Tonelli Cueto: arXiv preprints</title>
+    <meta name="description" content="Lista completa de preprints (co)escritos por Josu&eacute; Tonelli-Cueto" />
     <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="es_ES" />
     <meta property="og:locale:alternate" content="en_US" />
     <meta property="og:url" content="https://tonellicueto.xyz/arXiv_es.html" />
-    <meta property="og:title" content="Josué Tonelli Cueto: arXiv papers" /><!--35char-->
+    <meta property="og:title" content="Josu&eacute; Tonelli Cueto: arXiv papers" /><!--35char-->
     <meta property="og:description" content="Lista completa de arXiv papers"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM0.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--  Bootstrap core CSS  -->
@@ -82,7 +82,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png"/></a>
+      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png" alt="weblogo"/></a>
 
       <div class="collapse navbar-collapse " id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
@@ -131,12 +131,12 @@
 
     <!--  Main jumbotron for a primary marketing message or call to action  -->
 
-<div class="jumbotron">
+<div class="jumbotron" style="text-align:center;">
       <div class="container">
-        <center>
-        <h2 class="display-4">Preprints de Josué Tonelli-Cueto en arXiv</h2>
-        (Lista en inglés)
-        </center>
+
+        <h2 class="display-4">Preprints de Josu&eacute; Tonelli-Cueto en arXiv</h2>
+        (Lista en ingl&eacute;s)
+
      </div>
 </div>
 
@@ -148,7 +148,7 @@ Esta lista ha sido producida gracias a mi <a href="https://arxiv.org/a/tonellicu
 </div>
 <footer>
 <hr>
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
+    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
         <span id="finalsentence" style="float:right;">C&oacute;digo de la p&aacute;gina creado por el arte de copiar, pegar y cruzar los dedos&emsp;&emsp;</span></p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
