--- a/fragmentosdeunberlin.html
+++ b/fragmentosdeunberlin.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="es">
   <head>
     <meta name="robots" content="noindex">
     <meta http-equiv="Refresh" content="0; url=https://www.dropbox.com/sh/r6e1ry75vs15yms/AABjLj9Zuil3SJmId8_-5b2da?dl=0" />
@@ -6,6 +6,6 @@
     <link href="css/style.css" rel="stylesheet"/>
   </head>
   <body>
-    <p style="text-align:center;font-variant: small-caps;"><a href="https://www.dropbox.com/sh/r6e1ry75vs15yms/AABjLj9Zuil3SJmId8_-5b2da?dl=0">Sigue este link si la página no carga.</a></p>
+    <p style="text-align:center;font-variant: small-caps;"><a href="https://www.dropbox.com/sh/r6e1ry75vs15yms/AABjLj9Zuil3SJmId8_-5b2da?dl=0">Sigue este link si la p&aacute;gina no carga.</a></p>
   </body>
 </html>
