--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josué Tonelli-Cueto: Personal Website</title>
-    <meta name="description" content="Research, interests and more information about Josué Tonelli-Cueto" />
+    <title>Josu&eacute; Tonelli-Cueto: Personal Website</title>
+    <meta name="description" content="Research, interests and more information about Josu&eacute; Tonelli-Cueto" />
     <meta name="yandex-verification" content="98b48e414f9389e0" />
     <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="es_ES" />
     <meta property="og:url" content="https://tonellicueto.xyz" />
-    <meta property="og:title" content="Josué Tonelli-Cueto: Website" /><!--35char-->
-    <meta property="og:description" content="Personal website of Josué Tonelli-Cueto"><!--65char-->
+    <meta property="og:title" content="Josu&eacute; Tonelli-Cueto: Website" /><!--35char-->
+    <meta property="og:description" content="Personal website of Josu&eacute; Tonelli-Cueto"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM4.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--Twitter metadata-->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@tonellicueto" />
     <meta name="twitter:creator" content="@tonellicueto" />
-    <meta name="twitter:title" content="Josué Tonelli-Cueto: Personal Website" />
-    <meta name="twitter:description" content="This website contain the research, interests and more information about Josué Tonelli-Cueto." />
+    <meta name="twitter:title" content="Josu&eacute; Tonelli-Cueto: Personal Website" />
+    <meta name="twitter:description" content="This website contain the research, interests and more information about Josu&eacute; Tonelli-Cueto." />
     <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/SM4.jpg" />
 
     <!--  Bootstrap core CSS  -->
@@ -59,7 +59,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png"/></a>
+      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png" alt="weblogo"/></a>
 
       <div class="collapse navbar-collapse " id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
@@ -110,15 +110,15 @@
 <div class="jumbotron" style="margin-bottom: 0px;">
  <div class="row" style="display: flex;">
   <div class="col-md-5" align="center">
-        <img id="profilepic" itemprop="image" src="imgs/index002.jpg" style="width: 66.5%;" class="img-responsive center_image" alt="Picture of Josué Tonelli-Cueto at Inria.  &copy; Inria / Photo B. Fourrier" onclick="changeProfileImage()"/>
+        <img id="profilepic" itemprop="image" src="imgs/index002.jpg" style="width: 66.5%;" class="img-responsive center_image" alt="Picture of Josu&eacute; Tonelli-Cueto at Inria.  &copy; Inria / Photo B. Fourrier" onclick="changeProfileImage()"/>
   </div>
-  <div class="col-md-7">
-        <center>
-        <h1>Josué Tonelli&#8209;Cueto</h1>
+  <div class="col-md-7" style="text-align:center;">
+
+        <h1>Josu&eacute; Tonelli&#8209;Cueto</h1>
         <h2>Mathematician</h2>
         <h3>Postdoc at<br/><a href="https://www.utsa.edu/">The University of Texas at San Antonio</a></h3>
         <h4 style="color:#ee2523;font-variant: small-caps;">In the Job Market</h4>
-        </center>
+        
         <div class="row" align="center" style="padding-top:1vw;font-size:2vw;"><!--3vw padding top if not searching for a job-->
           <div class="col">
             <a class="btn btn-secondary" href="aboutme.html" role="button" style="width:80%;">About me</a>
@@ -148,7 +148,7 @@
 </div>
 
 <footer style="padding-top:1em;">
-    <p style="text-align:left;margin-bottom:0;padding-bottom:0;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
+    <p style="text-align:left;margin-bottom:0;padding-bottom:0;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> Code of the webpage created through the art of copying, pasting, editing and crossing fingers&emsp;&emsp;</span></p>
     <p style="text-align:left;margin-top:0;padding-top:0;" id="copyrightimage">&emsp;&emsp;Portrait: &copy; Inria / Photo B. Fourrier</p>
 <hr style="margin: 0;">
@@ -174,21 +174,21 @@
      {
          document.getElementById("profilepic").style="width: 66.5%;"
          document.getElementById("profilepic").src = "imgs/index001.jpg";
-         document.getElementById("profilepic").alt = "Portrait of Josué Tonelli-Cueto by Emmi Arvidsson";
+         document.getElementById("profilepic").alt = "Portrait of Josu&eacute; Tonelli-Cueto by Emmi Arvidsson";
          document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Portrait: &copy; Emmi Arvidsson";
      }
      else if (count%profimgs == 0)
      {
          document.getElementById("profilepic").style="width: 66.5%;"
          document.getElementById("profilepic").src = "imgs/index002.jpg";
-         document.getElementById("profilepic").alt = "Picture of Josué Tonelli-Cueto at Inria.  &copy; Inria / Photo B. Fourrier";
+         document.getElementById("profilepic").alt = "Picture of Josu&eacute; Tonelli-Cueto at Inria.  &copy; Inria / Photo B. Fourrier";
          document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Portrait: &copy; Inria / Photo B. Fourrier";
      }
      else if (count%profimgs == 1)
      {
          document.getElementById("profilepic").style="width: 80%;"
          document.getElementById("profilepic").src = "imgs/index000.png";
-         document.getElementById("profilepic").alt = "Picture of Josué Tonelli-Cueto at TU Berlin";
+         document.getElementById("profilepic").alt = "Picture of Josu&eacute; Tonelli-Cueto at TU Berlin";
          document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Portrait: &copy; Evgeniya Lagoda";
      }
     }
@@ -197,14 +197,14 @@
         document.getElementById("profilepic").style="width: 62.7%;"
         document.getElementById("profilepic").src = "imgs/indexclicks.jpg";
         document.getElementById("profilepic").alt = "Gato Suchen saying that there are no more clicks";
-        document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Picture: &copy; Josué Tonelli-Cueto";
+        document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Picture: &copy; Josu&eacute; Tonelli-Cueto";
     }
     else if (count == 5*profimgs)
     {
         document.getElementById("profilepic").style="width: 73.5%;"
         document.getElementById("profilepic").src = "imgs/indexclicks1.jpg";
         document.getElementById("profilepic").alt = "Gato Suchen peeing";
-        document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Picture: &copy; Josué Tonelli-Cueto";
+        document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Picture: &copy; Josu&eacute; Tonelli-Cueto";
     }
     else {}
     }
