--- a/index_es.html
+++ b/index_es.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <!-- Microdata markup added by Google Structured Data Markup Helper. -->
-<html lang="en"><head>
+<html lang="es"><head>
     <meta charset="utf-8"/>
     <link rel="icon" href="./imgs/logo.png"/>
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josué Tonelli Cueto: Página web personal</title>
-    <meta name="description" content="Investigación, intereses y más información sobre Josué Tonelli Cueto" />
+    <title>Josu&eacute; Tonelli Cueto: P&aacute;gina web personal</title>
+    <meta name="description" content="Investigaci&oacute;n, intereses y m&aacute;s informaci&oacute;n sobre Josu&eacute; Tonelli Cueto" />
     <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="es_ES" />
     <meta property="og:locale:alternate" content="en_US" />
     <meta property="og:url" content="https://tonellicueto.xyz/index_es.html" />
-    <meta property="og:title" content="Josué Tonelli-Cueto: Página web" /><!--35char-->
-    <meta property="og:description" content="Página web personal de Josué Tonelli-Cueto"><!--65char-->
+    <meta property="og:title" content="Josu&eacute; Tonelli-Cueto: P&aacute;gina web" /><!--35char-->
+    <meta property="og:description" content="P&aacute;gina web personal de Josu&eacute; Tonelli-Cueto"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM4.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--Twitter metadata-->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@tonellicueto" />
     <meta name="twitter:creator" content="@tonellicueto" />
-    <meta name="twitter:title" content="Josué Tonelli-Cueto: Página web personal" />
-    <meta name="twitter:description" content="Esta página web contiene la investigación, intereses y más información sobre Josué Tonelli Cueto." />
+    <meta name="twitter:title" content="Josu&eacute; Tonelli-Cueto: P&aacute;gina web personal" />
+    <meta name="twitter:description" content="Esta p&aacute;gina web contiene la investigaci&oacute;n, intereses y m&aacute;s informaci&oacute;n sobre Josu&eacute; Tonelli Cueto." />
     <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/SM4.jpg" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -57,7 +57,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png"/></a>
+      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png" alt="weblogo"/></a>
 
       <div class="collapse navbar-collapse " id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
@@ -108,15 +108,15 @@
     <div class="jumbotron" style="margin-bottom: 0px;">
      <div class="row" style="display: flex;">
       <div class="col-md-5" align="center">
-            <img id="profilepic" itemprop="image" src="imgs/index002.jpg" style="width: 66.5%;" class="img-responsive center_image" alt="Fotografía de Josué Tonelli Cueto en Inria.  &copy; Inria / Photo B. Fourrier" onclick="changeProfileImage()"/>
+            <img id="profilepic" itemprop="image" src="imgs/index002.jpg" style="width: 66.5%;" class="img-responsive center_image" alt="Fotograf&iacute;a de Josu&eacute; Tonelli Cueto en Inria.  &copy; Inria / Photo B. Fourrier" onclick="changeProfileImage()"/>
       </div>
-      <div class="col-md-7">
-        <center>
-        <h1>Josué Tonelli Cueto</h1>
-        <h2>Matemático</h2>
+      <div class="col-md-7" style="text-align:center;">
+
+        <h1>Josu&eacute; Tonelli Cueto</h1>
+        <h2>Matem&aacute;tico</h2>
         <h3>Postdoc en<br/><a href="https://www.utsa.edu/">The University of Texas at San Antonio</a></h3>
         <h4 style="color:#ee2523;font-variant: small-caps;">Buscando un trabajo</h4>
-        </center>
+
         <div class="row" align="center" style="padding-top:1vw;font-size:2vw;">
           <div class="col">
             <a class="btn btn-secondary" href="aboutme.html" role="button" style="width:80%;">Sobre mi</a>
@@ -146,7 +146,7 @@
 </div>
 
 <footer style="padding-top:1em;">
-    <p style="text-align:left;margin-bottom:0;padding-bottom:0;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
+    <p style="text-align:left;margin-bottom:0;padding-bottom:0;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> C&oacute;digo de la p&aacute;gina creado por el arte de copiar, pegar y cruzar los dedos&emsp;&emsp;</span></p>
     <p style="text-align:left;margin-top:0;padding-top:0;" id="copyrightimage">&emsp;&emsp;Retrato: &copy; Inria / Photo B. Fourrier</p>
 <hr style="margin: 0;">
@@ -172,21 +172,21 @@
      {
          document.getElementById("profilepic").style="width: 66.5%;"
          document.getElementById("profilepic").src = "imgs/index001.jpg";
-         document.getElementById("profilepic").alt = "Retrato de Josué Tonelli Cueto hecho por Emmi Arvidsson";
+         document.getElementById("profilepic").alt = "Retrato de Josu&eacute; Tonelli Cueto hecho por Emmi Arvidsson";
          document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Retrato: &copy; Emmi Arvidsson";
      }
      else if (count%profimgs == 0)
      {
          document.getElementById("profilepic").style="width: 66.5%;"
          document.getElementById("profilepic").src = "imgs/index002.jpg";
-         document.getElementById("profilepic").alt = "Fotografía de Josué Tonelli Cueto en Inria.  &copy; Inria / Photo B. Fourrier";
+         document.getElementById("profilepic").alt = "Fotograf&iacute;a de Josu&eacute; Tonelli Cueto en Inria.  &copy; Inria / Photo B. Fourrier";
          document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Retrato: &copy; Inria / Photo B. Fourrier";
      }
      else if (count%profimgs == 1)
      {
          document.getElementById("profilepic").style="width: 80%;"
          document.getElementById("profilepic").src = "imgs/index000.png";
-         document.getElementById("profilepic").alt = "Fotografía de Josué Tonelli Cueto en la TU Berlin";
+         document.getElementById("profilepic").alt = "Fotograf&iacute;a de Josu&eacute; Tonelli Cueto en la TU Berlin";
          document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Retrato: &copy; Evgeniya Lagoda";
      }
     }
@@ -194,15 +194,15 @@
     {
         document.getElementById("profilepic").style="width: 62.7%;"
         document.getElementById("profilepic").src = "imgs/indexclicks.jpg";
-        document.getElementById("profilepic").alt = "Gato Suchen diciendo que no más clicks en inglés";
-        document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Imagen: &copy; Josué Tonelli Cueto";
+        document.getElementById("profilepic").alt = "Gato Suchen diciendo que no m&aacute;s clicks en ingl&eacute;s";
+        document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Imagen: &copy; Josu&eacute; Tonelli Cueto";
     }
     else if (count == 5*profimgs)
     {
         document.getElementById("profilepic").style="width: 73.5%;"
         document.getElementById("profilepic").src = "imgs/indexclicks1.jpg";
         document.getElementById("profilepic").alt = "Gato Suchen peeing";
-        document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Imagen: &copy; Josué Tonelli Cueto";
+        document.getElementById("copyrightimage").innerHTML = "&emsp;&emsp;Imagen: &copy; Josu&eacute; Tonelli Cueto";
     }
     else {}
     }
