--- a/phdthesis_es.html
+++ b/phdthesis_es.html
@@ -5,6 +5,6 @@
     <link href="css/style.css" rel="stylesheet"/>
   </head>
   <body>
-    <p style="text-align:center;font-variant: small-caps;">Esta página ha cambiado su nombre. <a href="doctoralthesis_es.html">Por favor, sigue este enlace.</a></p>
+    <p style="text-align:center;font-variant: small-caps;">Esta p&aacute;gina ha cambiado su nombre. <a href="doctoralthesis_es.html">Por favor, sigue este enlace.</a></p>
   </body>
 </html>
