--- a/redbubble.html
+++ b/redbubble.html
@@ -6,14 +6,14 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josué Tonelli-Cueto: RedBubble Portfolio</title>
-    <meta name="description" content="External RedBubble Portfolio of Josué Tonelli-Cueto" />
+    <title>Josu&eacute; Tonelli-Cueto: RedBubble Portfolio</title>
+    <meta name="description" content="External RedBubble Portfolio of Josu&eacute; Tonelli-Cueto" />
     <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="es_ES" />
     <meta property="og:url" content="https://tonellicueto.xyz/redbubble.html" />
-    <meta property="og:title" content="Josué Tonelli-Cueto: RedBubble Portfolio" /><!--35char-->
+    <meta property="og:title" content="Josu&eacute; Tonelli-Cueto: RedBubble Portfolio" /><!--35char-->
     <meta property="og:description" content="External RedBubble Portfolio"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM4.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--  Bootstrap core CSS  -->
@@ -49,7 +49,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png"/></a>
+      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png" alt="weblogo"/></a>
 
       <div class="collapse navbar-collapse " id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
@@ -97,11 +97,11 @@
 
     <!--  Main jumbotron for a primary marketing message or call to action  -->
 
-<div class="jumbotron">
+<div class="jumbotron" style="text-align:center;">
       <div class="container">
-        <center>
-        <h2 class="display-4">RedBubble Portfolio of Josué Tonelli-Cueto</h2>
-        </center>
+
+        <h2 class="display-4">RedBubble Portfolio of Josu&eacute; Tonelli-Cueto</h2>
+
      </div>
 </div>
 
@@ -113,7 +113,7 @@
 </div>
 <footer>
 <hr>
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
+    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> Code of the webpage created through the art of copying, pasting, editing and crossing fingers&emsp;&emsp;</span></p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
