--- a/redbubble_es.html
+++ b/redbubble_es.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <!-- Microdata markup added by Google Structured Data Markup Helper. -->
-<html lang="en"><head>
+<html lang="es"><head>
     <meta charset="utf-8"/>
     <link rel="icon" href="./imgs/logo.png"/>
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josué Tonelli-Cueto: Portfolio Externo de RedBubble</title>
-    <meta name="description" content="Portfolio Externo de RedBubble de Josué Tonelli-Cueto" />
+    <title>Josu&eacute; Tonelli-Cueto: Portfolio Externo de RedBubble</title>
+    <meta name="description" content="Portfolio Externo de RedBubble de Josu&eacute; Tonelli-Cueto" />
     <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="es_ES" />
     <meta property="og:locale:alternate" content="en_US" />
     <meta property="og:url" content="https://tonellicueto.xyz/redbubble_es.html" />
-    <meta property="og:title" content="Josué Tonelli-Cueto: Portfolio Externo de RedBubble" /><!--35char-->
+    <meta property="og:title" content="Josu&eacute; Tonelli-Cueto: Portfolio Externo de RedBubble" /><!--35char-->
     <meta property="og:description" content="Portfolio Externo de RedBubble"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM4.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--  Bootstrap core CSS  -->
@@ -49,7 +49,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png"/></a>
+      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png" alt="weblogo"/></a>
 
       <div class="collapse navbar-collapse " id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
@@ -97,23 +97,23 @@
 
     <!--  Main jumbotron for a primary marketing message or call to action  -->
 
-<div class="jumbotron">
+<div class="jumbotron" style="text-align:center;">
       <div class="container">
-        <center>
-        <h2 class="display-4">Portfolio de RedBubble de Josué Tonelli-Cueto</h2>
-        </center>
+
+        <h2 class="display-4">Portfolio de RedBubble de Josu&eacute; Tonelli-Cueto</h2>
+
      </div>
 </div>
 
 
 
 <div class="container" style="text-align:center">
-  <p style="text-align:justify;">Este es mi <a href="https://IasafroMaesman.redbubble.com">Portfolio Externo de RedBubble</a> mostrando algunos de mis diseños disponible en la plataforma. Puedes pedir pegatinas, imanes, postales, ropa, cuadernos, etc. con mis diseños a través de RedBubble. Solo tienes que seleccionar el diseño que quieras y entonces puedes decidir en qué producto quieres el diseño.</p>
+  <p style="text-align:justify;">Este es mi <a href="https://IasafroMaesman.redbubble.com">Portfolio Externo de RedBubble</a> mostrando algunos de mis dise&ntilde;os disponible en la plataforma. Puedes pedir pegatinas, imanes, postales, ropa, cuadernos, etc. con mis dise&ntilde;os a trav&eacute;s de RedBubble. Solo tienes que seleccionar el dise&ntilde;o que quieras y entonces puedes decidir en qu&eacute; producto quieres el dise&ntilde;o.</p>
 <script id="rb-xzfcxvzx" type="text/javascript">var r=4; var c=4; if (screen.width <= 699) {r=r*c;c=1;} new RBExternalPortfolio('www.redbubble.com', 'iasafromaesman', r, c).renderIframe();</script>
 </div>
 <footer>
 <hr>
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
+    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
         <span id="finalsentence" style="float:right;">C&oacute;digo de la p&aacute;gina creado por el arte de copiar, pegar y cruzar los dedos&emsp;&emsp;</span></p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
