--- a/teatroespanolaparis2022.html
+++ b/teatroespanolaparis2022.html
@@ -6,14 +6,14 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Teatro Español à Paris (30/6 & 4/7)</title>
-    <meta name="description" content="Página de la representación «dramaTOURgia» de los grupos amateurs de teatro «Teatro Español à Paris» en 2022" />
+    <title>Teatro Espa&ntilde;ol &agrave; Paris (30/6 & 4/7)</title>
+    <meta name="description" content="P&aacute;gina de la representaci&oacute;n «dramaTOURgia» de los grupos amateurs de teatro «Teatro Espa&ntilde;ol &agrave; Paris» en 2022" />
     <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="es_ES" />
     <meta property="og:url" content="https://tonellicueto.xyz/teatroespanolaparis2022.html" />
-    <meta property="og:title" content="Teatro Español à Paris (30/6 & 4/7)" /><!--35char-->
-    <meta property="og:description" content="Página de la representación «dramaTOURgia» de los grupos amateurs de teatro «Teatro Español à Paris» en 2022"><!--65char-->
+    <meta property="og:title" content="Teatro Espa&ntilde;ol &agrave; Paris (30/6 & 4/7)" /><!--35char-->
+    <meta property="og:description" content="P&aacute;gina de la representaci&oacute;n «dramaTOURgia» de los grupos amateurs de teatro «Teatro Espa&ntilde;ol &agrave; Paris» en 2022"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/design/PosterTeatro2smalls.jpg"><!--300KB and minimum dimensions of 300 x 200-->
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -32,52 +32,52 @@
 <div class="container" style="text-align:justify;">
 <br/>
 <h1 align="center">drama<span style="color:#ee2523;">TOUR</span>gia<h1/>
-<h2 align="center">un viaje teatral a través de España</h2>
+<h2 align="center">un viaje teatral a trav&eacute;s de Espa&ntilde;a</h2>
 
 <!--<div class="row" style="padding-bottom:2em;">
 <div class="col" style="text-align:center;">
-<a href="design/PosterTeatro1.jpg"><img style="width:30%;" src="design/PosterTeatro1small.jpg" alt="Poster del espectáculo"/></a>
+<a href="design/PosterTeatro1.jpg"><img style="width:30%;" src="design/PosterTeatro1small.jpg" alt="Poster del espect&aacute;culo"/></a>
 </div>
 <div class="col" style="text-align:center;">
-<a href="design/PosterTeatro2.jpg"><img style="width:30%;" src="design/PosterTeatro2small.jpg" alt="Poster del espectáculo"/></a>
+<a href="design/PosterTeatro2.jpg"><img style="width:30%;" src="design/PosterTeatro2small.jpg" alt="Poster del espect&aacute;culo"/></a>
 </div>
 </div>-->
 
 <p sytle="text-align: justify;">
-El proyecto <em>Teatro Español à Paris</em> de Luzía Eviza consiste de varios grupos de teatro amateur en castellano en París. Al final de este cursos, sus dos grupos realizarán una representación en la Comédie Oberkampf (115 Rue du Chemin Vert, 75011 Paris), respectivamente, el 30 de junio
+El proyecto <em>Teatro Espa&ntilde;ol &agrave; Paris</em> de Luz&iacute;a Eviza consiste de varios grupos de teatro amateur en castellano en Par&iacute;s. Al final de este cursos, sus dos grupos realizar&aacute;n una representaci&oacute;n en la Com&eacute;die Oberkampf (115 Rue du Chemin Vert, 75011 Paris), respectivamente, el 30 de junio
 y el 4 de julio a las 21:30.
 </p>
 <p sytle="text-align: justify;">
-Ambas representaciones tratan sobre el presente, el pasado y la historia más reciente de España. En cada representación, se reúnen diferentes obras de teatro breve, centradas en la dramaturgia española contemporánea. Entre las obras representadas, se encuentran obras de los siguientes autores: Juan Mayorga, Juan Carlos Rubio, Denise Despeyroux, Cristina Colmena, Luis Fernando de Julián, Elisenda Guiu y Manuel Benito.
+Ambas representaciones tratan sobre el presente, el pasado y la historia m&aacute;s reciente de Espa&ntilde;a. En cada representaci&oacute;n, se re&uacute;nen diferentes obras de teatro breve, centradas en la dramaturgia espa&ntilde;ola contempor&aacute;nea. Entre las obras representadas, se encuentran obras de los siguientes autores: Juan Mayorga, Juan Carlos Rubio, Denise Despeyroux, Cristina Colmena, Luis Fernando de Juli&aacute;n, Elisenda Guiu y Manuel Benito.
 </p>
-<p sytle="text-align:justify;padding-top:1em;">Más información en: teatroespanolentradas@gmail.com</p>
-<h3>Primera representación (30/junio, a las 21:30)</h3>
+<p sytle="text-align:justify;padding-top:1em;">M&aacute;s informaci&oacute;n en: teatroespanolentradas@gmail.com</p>
+<h3>Primera representaci&oacute;n (30/junio, a las 21:30)</h3>
 <p sytle="text-align: justify;">
-  <b>¿Cuándo?</b> 30 de junio de 2022<br/>
-  <b>¿A qué hora?</b> A las 21:30<br/>
-  <b>¿Dónde?</b> Comédie Oberkampf (115 Rue du Chemin Vert, 75011 Paris)<br/>
-  <b>¿Cuánto?</b> Precio de 3 euros, con la posibilidad de pagar hasta un precio 5 euros para ayudar con los costes de la obra.<br/>
+  <b>&iquest;Cu&aacute;ndo?</b> 30 de junio de 2022<br/>
+  <b>&iquest;A qu&eacute; hora?</b> A las 21:30<br/>
+  <b>&iquest;D&oacute;nde?</b> Com&eacute;die Oberkampf (115 Rue du Chemin Vert, 75011 Paris)<br/>
+  <b>&iquest;Cu&aacute;nto?</b> Precio de 3 euros, con la posibilidad de pagar hasta un precio 5 euros para ayudar con los costes de la obra.<br/>
 </p>
 
-<h3>Segunda representación (4/julio, a las 21:30)</h3>
+<h3>Segunda representaci&oacute;n (4/julio, a las 21:30)</h3>
 <p sytle="text-align: justify;">
-  <b>¿Cuándo?</b> 4 de julio de 2022<br/>
-  <b>¿A qué hora?</b> A las 21:30<br/>
-  <b>¿Dónde?</b> Comédie Oberkampf (115 Rue du Chemin Vert, 75011 Paris)<br/>
-  <b>¿Cuánto?</b> 5 euros<br/>
+  <b>&iquest;Cu&aacute;ndo?</b> 4 de julio de 2022<br/>
+  <b>&iquest;A qu&eacute; hora?</b> A las 21:30<br/>
+  <b>&iquest;D&oacute;nde?</b> Com&eacute;die Oberkampf (115 Rue du Chemin Vert, 75011 Paris)<br/>
+  <b>&iquest;Cu&aacute;nto?</b> 5 euros<br/>
 </p>
 
 
 <h3>Carteles</h3>
 
-Los carteles fueron diseñados por Josué Tonelli Cueto. El primero muestra a Clara Campoamor y el segundo a Federico García Lorca.
+Los carteles fueron dise&ntilde;ados por Josu&eacute; Tonelli Cueto. El primero muestra a Clara Campoamor y el segundo a Federico Garc&iacute;a Lorca.
 
 <div class="row" style="padding-bottom:2em;">
 <div class="col-md-6" style="text-align:center;">
-<a href="design/PosterTeatro1.jpg"><img style="width:90%;" src="design/PosterTeatro1small.jpg" alt="Poster del espectáculo"/></a>
+<a href="design/PosterTeatro1.jpg"><img style="width:90%;" src="design/PosterTeatro1small.jpg" alt="Poster del espect&aacute;culo"/></a>
 </div>
 <div class="col-md-6" style="text-align:center;">
-<a href="design/PosterTeatro2.jpg"><img style="width:90%;" src="design/PosterTeatro2small.jpg" alt="Poster del espectáculo"/></a>
+<a href="design/PosterTeatro2.jpg"><img style="width:90%;" src="design/PosterTeatro2small.jpg" alt="Poster del espect&aacute;culo"/></a>
 </div>
 </div>
 
@@ -87,7 +87,7 @@ Los carteles fueron diseñados por Josué Tonelli Cueto. El primero muestra a Cl
 </div>
 <!--<footer>
 <hr>
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
+    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> Code of the webpage created through the art of copying, pasting, editing and crossing fingers&emsp;&emsp;</span></p>
 <hr style="margin: 0;">
 </footer>--> <!--  /container  -->
@@ -119,8 +119,8 @@ Los carteles fueron diseñados por Josué Tonelli Cueto. El primero muestra a Cl
       for (i = 0; i < x.length; i++) {
        x[i].style="font-size:1.5em;font-weight:bold;";
     }
-    x[0].innerHTML='Primera representación<br/><span style="text-align:right;">(30/junio, 21:30)</span>';
-    x[1].innerHTML='Segunda representación<br/><span style="text-align:right;">(4/julio, 21:30)</span>';
+    x[0].innerHTML='Primera representaci&oacute;n<br/><span style="text-align:right;">(30/junio, 21:30)</span>';
+    x[1].innerHTML='Segunda representaci&oacute;n<br/><span style="text-align:right;">(4/julio, 21:30)</span>';
     x = document.getElementsByClassName("btn btn-secondary");
     for (i = 0; i < x.length; i++) {
      x[i].style="width:100%;font-size:2em;";
