--- a/PublicFolderDB.html
+++ b/PublicFolderDB.html
@@ -6,6 +6,6 @@
     <link href="css/style.css" rel="stylesheet"/>
   </head>
   <body>
-    <p style="text-align:center;font-variant: small-caps;"><a href="https://www.dropbox.com/scl/fo/2hzmpvlg9h43vznhk9jug/h?dl=0&rlkey=wgirlhan7wopc0mz1lvuz8ace">Sigue este link si la página no carga.</a></p>
+    <p style="text-align:center;font-variant: small-caps;"><a href="https://www.dropbox.com/scl/fo/2hzmpvlg9h43vznhk9jug/h?dl=0&rlkey=wgirlhan7wopc0mz1lvuz8ace">Sigue este link si la p&aacute;gina no carga.</a></p>
   </body>
 </html>
