--- a/aboutme_es.html
+++ b/aboutme_es.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <!-- Microdata markup added by Google Structured Data Markup Helper. -->
-<html lang="en"><head>
+<html lang="es"><head>
     <meta charset="utf-8"/>
     <link rel="icon" href="./imgs/logo.png"/>
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Sobre Josué Tonelli Cueto</title>
-    <meta name="description" content="Biografía y auto-descripción de Josué Tonelli-Cueto" />
+    <title>Sobre Josu&eacute; Tonelli Cueto</title>
+    <meta name="description" content="Biograf&iacute;a y auto-descripci&oacute;n de Josu&eacute; Tonelli-Cueto" />
     <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="es_ES" />
     <meta property="og:locale:alternate" content="en_US" />
     <meta property="og:url" content="https://tonellicueto.xyz/aboutme_es.html" />
-    <meta property="og:title" content="Josué Tonelli Cueto: Sobre mi" /><!--35char-->
-    <meta property="og:description" content="Biografía y auto-descripción"><!--65char-->
+    <meta property="og:title" content="Josu&eacute; Tonelli Cueto: Sobre mi" /><!--35char-->
+    <meta property="og:description" content="Biograf&iacute;a y auto-descripci&oacute;n"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM1.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--Twitter metadata-->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@tonellicueto" />
     <meta name="twitter:creator" content="@tonellicueto" />
-    <meta name="twitter:title" content="Josué Tonelli-Cueto: Sobre mi" />
-    <meta name="twitter:description" content="Biografía y auto-descripción de Josué Tonelli Cueto." />
+    <meta name="twitter:title" content="Josu&eacute; Tonelli-Cueto: Sobre mi" />
+    <meta name="twitter:description" content="Biograf&iacute;a y auto-descripci&oacute;n de Josu&eacute; Tonelli Cueto." />
     <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/josue_tonellicueto_aboutme.JPG" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -37,7 +37,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png"/></a>
+      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png" alt="weblogo"/></a>
 
       <div class="collapse navbar-collapse " id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
@@ -88,55 +88,53 @@
 
 
     <!--  Main jumbotron for a primary marketing message or call to action  -->
-<div class="jumbotron">
+<div class="jumbotron" style="text-align:center;">
     <div class="container">
-        <center>
         <h2 class="display-4">Sobre mi</h2>
-        </center>
     </div>
 </div>
 
 
 <div class="container" style="text-align:justify;">
-  <img id="portrait" src="imgs/josue_tonellicueto_aboutme.JPG" alt="Josué Tonelli-Cueto enfrente de la pizarra sosteniendo una tiza" style="float:right;margin-left:1.2em;margin-bottom:1.5em;margin-top:1.5em;" width="40%"/>
+  <img id="portrait" src="imgs/josue_tonellicueto_aboutme.JPG" alt="Josu&eacute; Tonelli-Cueto enfrente de la pizarra sosteniendo una tiza" style="float:right;margin-left:1.2em;margin-bottom:1.5em;margin-top:1.5em;" width="40%"/>
   <p>
-    My nombre es Josué Tonelli Cueto. Sin embargo, el nombre que uso académicamente es Josué Tonelli-Cueto. El guión es para evitar confusiones en el contexto internacional, dado que en muchos países de tradición no hispana lo común es tener un solo apellido. De esta forma, está claro que ambas palabras forman parte de mis apellidos y que ninguna de ellas en un segundo nombre.
+    My nombre es Josu&eacute; Tonelli Cueto. Sin embargo, el nombre que uso acad&eacute;micamente es Josu&eacute; Tonelli-Cueto. El gui&oacute;n es para evitar confusiones en el contexto internacional, dado que en muchos pa&iacute;ses de tradici&oacute;n no hispana lo com&uacute;n es tener un solo apellido. De esta forma, est&aacute; claro que ambas palabras forman parte de mis apellidos y que ninguna de ellas en un segundo nombre.
   </p>
   <p>
-    Soy originario de Bilbao, una ciudad del País Vasco (o Euskadi) en el norte de España, aunque nací en Santander, otra ciudad en el norte de España. Me considero de Bilbao, porque esta es la ciudad donde crecí y me crié. También, como dicen los dichos, &ldquo;la vaca es de donde pace&rdquo; y &ldquo;los de Bilbao nacemos donde nos da la gana.&rdquo;
+    Soy originario de Bilbao, una ciudad del Pa&iacute;s Vasco (o Euskadi) en el norte de Espa&ntilde;a, aunque nac&iacute; en Santander, otra ciudad en el norte de Espa&ntilde;a. Me considero de Bilbao, porque esta es la ciudad donde crec&iacute; y me cri&eacute;. Tambi&eacute;n, como dicen los dichos, &ldquo;la vaca es de donde pace&rdquo; y &ldquo;los de Bilbao nacemos donde nos da la gana.&rdquo;
   </p>
   <p>
-    Actualmente, soy un investigador postdoctoral en INRIA Paris y el IMJ-PRG, siendo mis mentores Fabrice Rouillier y Elias Tsigaridas Mis intereses están formados por los algoritmos numéricos y la complejidad basada en condición, la geometría algebraica computacional y la geometría aleatoria.
+    Actualmente, soy un investigador postdoctoral en INRIA Paris y el IMJ-PRG, siendo mis mentores Fabrice Rouillier y Elias Tsigaridas Mis intereses est&aacute;n formados por los algoritmos num&eacute;ricos y la complejidad basada en condici&oacute;n, la geometr&iacute;a algebraica computacional y la geometr&iacute;a aleatoria.
   </p>
   <p>
-    Además de discutir, pensar y escribir acerca de las matemáticas, hay otros aspectos de la vida que disfruto. A continuación, una lista alfabética cuasi-aleatoria de otras diez cosas que me gustan y disfruto: 1ª, andar mientras ando perdido en mis pensamientos; 2ª, bañarme en el mar (cuando es posible); 3ª, beber café; 4ª, conversar y debatir sobre temas varios con mis amigues (y a veces otras personas) mientras tomo una cerveza (u otra bebida equivalente); 5ª, enviar postales; 6ª, escribir historias cortas, poemas y caligramas; 7ª, hacer figuras de origami; 8ª, el jamón ibérico; 9ª, leer libros no matemáticos; y 10ª, montar en bici. Por supuesto, hay más cosas que me gustan, como los gatos, pero listar cosas que me gustan no es una cosa que me guste.
+    Adem&aacute;s de discutir, pensar y escribir acerca de las matem&aacute;ticas, hay otros aspectos de la vida que disfruto. A continuaci&oacute;n, una lista alfab&eacute;tica cuasi-aleatoria de otras diez cosas que me gustan y disfruto: 1&ordf;, andar mientras ando perdido en mis pensamientos; 2&ordf;, ba&ntilde;arme en el mar (cuando es posible); 3&ordf;, beber caf&eacute;; 4&ordf;, conversar y debatir sobre temas varios con mis amigues (y a veces otras personas) mientras tomo una cerveza (u otra bebida equivalente); 5&ordf;, enviar postales; 6&ordf;, escribir historias cortas, poemas y caligramas; 7&ordf;, hacer figuras de origami; 8&ordf;, el jam&oacute;n ib&eacute;rico; 9&ordf;, leer libros no matem&aacute;ticos; y 10&ordf;, montar en bici. Por supuesto, hay m&aacute;s cosas que me gustan, como los gatos, pero listar cosas que me gustan no es una cosa que me guste.
   </p>
   <h3>
-    Biografía académica
+    Biograf&iacute;a acad&eacute;mica
   </h3>
   <p>
-    Estudié la Licenciatura en Matemáticas, que es un grado en matemáticas de cinco años, en la Universidad del País Vasco entre 2009 y 2014. Durante mis estudios, fundé y edité, junto a Ricardo Grande y con la ayuda de Marta Macho Stadler, la revista de divulgación matemática $\pi kasle$ escrita por estudiantes. También, participé en el club de debate de la universidad.
+    Estudi&eacute; la Licenciatura en Matem&aacute;ticas, que es un grado en matem&aacute;ticas de cinco a&ntilde;os, en la Universidad del Pa&iacute;s Vasco entre 2009 y 2014. Durante mis estudios, fund&eacute; y edit&eacute;, junto a Ricardo Grande y con la ayuda de Marta Macho Stadler, la revista de divulgaci&oacute;n matem&aacute;tica $\pi kasle$ escrita por estudiantes. Tambi&eacute;n, particip&eacute; en el club de debate de la universidad.
   </p>
   <p>
-    Adicionalmente, durante mis estudios, tuve la suerte de que se me dieran oportunidades que me permitieron perseguir mis intereses matemáticos más allá. En 2012 y 2013, atendí el programa de verano para estudiantes de grado del Park City Mathematic Institute, gracias a becas dadas por el programa. En 2013, pude disfrutar una estancia de verano de investigación para estudiantes de grado en el ICMAT bajo la supervisión de Andrei Jaikin-Zapirain, gracias a una beca del gobierno español. En 2014, disfruté de otra experience de investigación para estudiantes de grado en la Universidad del País Vasco bajo la supervisión de Gustavo Adolfo Fernández Alcober, gracias a una beca del gobierno vasco.
+    Adicionalmente, durante mis estudios, tuve la suerte de que se me dieran oportunidades que me permitieron perseguir mis intereses matem&aacute;ticos m&aacute;s all&aacute;. En 2012 y 2013, atend&iacute; el programa de verano para estudiantes de grado del Park City Mathematic Institute, gracias a becas dadas por el programa. En 2013, pude disfrutar una estancia de verano de investigaci&oacute;n para estudiantes de grado en el ICMAT bajo la supervisi&oacute;n de Andrei Jaikin-Zapirain, gracias a una beca del gobierno espa&ntilde;ol. En 2014, disfrut&eacute; de otra experience de investigaci&oacute;n para estudiantes de grado en la Universidad del Pa&iacute;s Vasco bajo la supervisi&oacute;n de Gustavo Adolfo Fern&aacute;ndez Alcober, gracias a una beca del gobierno vasco.
   </p>
   <p>
-    En 2014, me uní a la Berlin Mathematical School, una escuela conjunta de doctorado en matemáticas de las tres universidades de Berlín, como un Phase I student (esto es, estudiante de máster) gracias a una beca de la Obra Social &rdquo;la Caixa&rdquo; y el Servicio Alemán de Intercambio Académico (DAAD). En 2016, tras completar el Qualifying Exam de la BMS, pasé a ser un Phase II student. En 2017, concluí el Máster en Matemáticas de la Technische Universität Berlin, tras escribir una tesis de máster bajo la supervisión de Peter Bürgisser. Ese mismo año, me convertí en un estudiante de doctorado de Peter Bürgisser y Felipe Cucker en la Technische Universität Berlin, gracias a una beca doctoral financiada por la Einstein Foundation Berlin. En 2019, defendí exitosamente mi tesis doctoral el 28 de noviembre.
+    En 2014, me un&iacute; a la Berlin Mathematical School, una escuela conjunta de doctorado en matem&aacute;ticas de las tres universidades de Berl&iacute;n, como un Phase I student (esto es, estudiante de m&aacute;ster) gracias a una beca de la Obra Social &rdquo;la Caixa&rdquo; y el Servicio Alem&aacute;n de Intercambio Acad&eacute;mico (DAAD). En 2016, tras completar el Qualifying Exam de la BMS, pas&eacute; a ser un Phase II student. En 2017, conclu&iacute; el M&aacute;ster en Matem&aacute;ticas de la Technische Universit&auml;t Berlin, tras escribir una tesis de m&aacute;ster bajo la supervisi&oacute;n de Peter B&uuml;rgisser. Ese mismo a&ntilde;o, me convert&iacute; en un estudiante de doctorado de Peter B&uuml;rgisser y Felipe Cucker en la Technische Universit&auml;t Berlin, gracias a una beca doctoral financiada por la Einstein Foundation Berlin. En 2019, defend&iacute; exitosamente mi tesis doctoral el 28 de noviembre.
   </p>
   <p>
-    Durante mi paso por la BMS, he participado activamente en la vida de la escuela. Durante el 2017, fui BMS Student Representative; en 2018, organizé, junto a mis compañeres de les BMS Student Representatives, la BMS Student Conference; y, desde 2016 hasta el fin de mis estudios allí, estuve participando en la organización del &ldquo;What is...?&rdquo; Seminar.
+    Durante mi paso por la BMS, he participado activamente en la vida de la escuela. Durante el 2017, fui BMS Student Representative; en 2018, organiz&eacute;, junto a mis compa&ntilde;eres de les BMS Student Representatives, la BMS Student Conference; y, desde 2016 hasta el fin de mis estudios all&iacute;, estuve participando en la organizaci&oacute;n del &ldquo;What is...?&rdquo; Seminar.
   </p>
   <p>
-    En 2020, empecé un postdoc en INRIA Paris y el IMJ-PRG, siendo mis mentores Fabrice Rouillier y Elias Tsigaridas.
+    En 2020, empec&eacute; un postdoc en INRIA Paris y el IMJ-PRG, siendo mis mentores Fabrice Rouillier y Elias Tsigaridas.
   </p>
-  <h3>Genealogía matemática</h3>
-  <p>Puedes investigar mes ancestres y familiares matemátiques académiques en el Math Genealogy Project.</p>
-  <p style="text-align:center"><a class="btn btn-MGP" href="https://www.genealogy.math.ndsu.nodak.edu/id.php?id=256775" role="button">Math Genealogy Project ID: 256775</a> <a class="btn btn-MGP" href="pdf/mathgenealogy_tonellicueto.pdf" role="button">Poster de mi genealog&iacute;a académica</a></p>
+  <h3>Genealog&iacute;a matem&aacute;tica</h3>
+  <p>Puedes investigar mes ancestres y familiares matem&aacute;tiques acad&eacute;miques en el Math Genealogy Project.</p>
+  <p style="text-align:center"><a class="btn btn-MGP" href="https://www.genealogy.math.ndsu.nodak.edu/id.php?id=256775" role="button">Math Genealogy Project ID: 256775</a> <a class="btn btn-MGP" href="pdf/mathgenealogy_tonellicueto.pdf" role="button">Poster de mi genealog&iacute;a acad&eacute;mica</a></p>
 </div>
 
 <footer>
 <hr>
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
+    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> C&oacute;digo de la p&aacute;gina creado por el arte de copiar, pegar y cruzar los dedos&emsp;&emsp;</span></p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
