--- a/contact.html
+++ b/contact.html
@@ -6,22 +6,22 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josue Tonelli-Cueto's Contact Information</title>
-    <meta name="description" content="Work adress, e-mail and other profiles in the web of Josué Tonelli-Cueto" />
+    <title>Josu&eacute; Tonelli-Cueto's Contact Information</title>
+    <meta name="description" content="Work adress, e-mail and other profiles in the web of Josu&eacute; Tonelli-Cueto" />
     <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="es_ES" />
     <meta property="og:url" content="https://tonellicueto.xyz/contact.html" />
-    <meta property="og:title" content="Josué Tonelli-Cueto: Contact" /><!--35char-->
+    <meta property="og:title" content="Josu&eacute; Tonelli-Cueto: Contact" /><!--35char-->
     <meta property="og:description" content="Contact information and social media"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM3.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--Twitter metadata-->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@tonellicueto" />
     <meta name="twitter:creator" content="@tonellicueto" />
-    <meta name="twitter:title" content="Josué Tonelli-Cueto: Contact" />
-    <meta name="twitter:description" content="Contact information and social media of Josué Tonelli-Cueto." />
+    <meta name="twitter:title" content="Josu&eacute; Tonelli-Cueto: Contact" />
+    <meta name="twitter:description" content="Contact information and social media of Josu&eacute; Tonelli-Cueto." />
     <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/contact2.jpg" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -38,7 +38,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png"/></a>
+      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png" alt="weblogo"/></a>
 
       <div class="collapse navbar-collapse " id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
@@ -92,17 +92,17 @@
  <div class="row">
   <div class="col-md-4" style="padding-top:1em;">
 <h3>&ensp;</h3><p></p>
-    <center>
-<img src="imgs/contact2.jpg" alt="Josué Tonelli-Cueto somewhere in Venice" style="width:94%;">
-   </center>
+    
+<img src="imgs/contact2.jpg" alt="Josu&eacute; Tonelli-Cueto somewhere in Venice" style="width:94%;">
+   
 <p align="center" style="font-size:x-small;">In front of a gold leafed wall in Venezia.</p>
   </div>
   <div class="col-md-4" style="padding-top:1em;">
-     <h3>Dr. Josué Tonelli-Cueto</h3>
+     <h3>Dr. Josu&eacute; Tonelli-Cueto</h3>
 <p></p>
      <p style="text-align:left;">
 <b>Institut de Mathematiques de Jussieu<br/> - Paris Rive Gauche</b><br/>
-Sorbonne Université<br/> - Campus Pierre et Marie Curie<br/>
+Sorbonne Universit&eacute;<br/> - Campus Pierre et Marie Curie<br/>
 Boite Courrier 247<br/>
 4, place Jussieu<br/>
 75252 Paris Cedex 05<br/>
@@ -147,7 +147,7 @@ TOBEUPDATED (phone)
 </div>
 <footer>
 <hr>
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
+    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> Code of the webpage created through the art of copying, pasting, editing and crossing fingers&emsp;&emsp;</span></p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
