--- a/contact_es.html
+++ b/contact_es.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <!-- Microdata markup added by Google Structured Data Markup Helper. -->
-<html lang="en"><head>
+<html lang="es"><head>
     <meta charset="utf-8"/>
     <link rel="icon" href="./imgs/logo.png"/>
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josué Tonelli Cueto: Información de contacto</title>
-    <meta name="description" content="Dirección en el trabajo, e-mail y perfiles en la web de Josué Tonelli-Cueto" />
+    <title>Josu&eacute; Tonelli Cueto: Informaci&oacute;n de contacto</title>
+    <meta name="description" content="Direcci&oacute;n en el trabajo, e-mail y perfiles en la web de Josu&eacute; Tonelli-Cueto" />
     <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="es_ES" />
     <meta property="og:locale:alternate" content="en_US" />
     <meta property="og:url" content="https://tonellicueto.xyz/contact_es.html" />
-    <meta property="og:title" content="Josué Tonelli Cueto: Contacto" /><!--35char-->
-    <meta property="og:description" content="Información de contacto y redes sociales"><!--65char-->
+    <meta property="og:title" content="Josu&eacute; Tonelli Cueto: Contacto" /><!--35char-->
+    <meta property="og:description" content="Informaci&oacute;n de contacto y redes sociales"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM3.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--Twitter metadata-->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@tonellicueto" />
     <meta name="twitter:creator" content="@tonellicueto" />
-    <meta name="twitter:title" content="Josué Tonelli-Cueto: Contacto" />
-    <meta name="twitter:description" content="Información de contacto y redes sociales de Josué Tonelli Cueto." />
+    <meta name="twitter:title" content="Josu&eacute; Tonelli-Cueto: Contacto" />
+    <meta name="twitter:description" content="Informaci&oacute;n de contacto y redes sociales de Josu&eacute; Tonelli Cueto." />
     <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/contact2.jpg" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -37,7 +37,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png"/></a>
+      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png" alt="weblogo"/></a>
 
       <div class="collapse navbar-collapse " id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
@@ -91,17 +91,17 @@
  <div class="row">
   <div class="col-md-4" style="padding-top:1em;">
 <h3>&ensp;</h3><p></p>
-    <center>
-<img src="imgs/contact2.jpg" alt="Josué Tonelli Cueto en alg&uacute;n lugar de Venezia" style="width:94%;">
-   </center>
+
+<img src="imgs/contact2.jpg" alt="Josu&eacute; Tonelli Cueto en alg&uacute;n lugar de Venezia" style="width:94%;">
+
 <p align="center" style="font-size:x-small;">Delante de un muro cubierto de pan de oro en Venezia.</p>
   </div>
   <div class="col-md-4" style="padding-top:1em;">
-     <h3>Dr. Josué Tonelli Cueto</h3>
+     <h3>Dr. Josu&eacute; Tonelli Cueto</h3>
 <p></p>
      <p style="text-align:left;">
        <b>Institut de Mathematiques de Jussieu<br/> - Paris Rive Gauche</b><br/>
-       Sorbonne Université<br/> - Campus Pierre et Marie Curie<br/>
+       Sorbonne Universit&eacute;<br/> - Campus Pierre et Marie Curie<br/>
        Boite Courrier 247<br/>
        4, place Jussieu<br/>
        75252 Paris Cedex 05<br/>
@@ -114,7 +114,7 @@ Habitaci&oacute;n 15-16.414
 <p align="left" id="obf"></p>
 
 <p align="left">
-TOBEUPDATED (teléfono)
+TOBEUPDATED (tel&eacute;fono)
 </p>
 
      <!--<p align="left">
@@ -145,7 +145,7 @@ TOBEUPDATED (teléfono)
 </div>
 <footer>
 <hr>
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
+    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
         <span id="finalsentence" style="float:right;">C&oacute;digo de la p&aacute;gina creado por el arte de copiar, pegar y cruzar los dedos&emsp;&emsp;</span></p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
