--- a/research.html
+++ b/research.html
@@ -6,22 +6,22 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Josué Tonelli-Cueto: Research</title>
-    <meta name="description" content="Research interests and list of publications of Josué Tonelli-Cueto" />
+    <title>Josu&eacute; Tonelli-Cueto: Research</title>
+    <meta name="description" content="Research interests and list of publications of Josu&eacute; Tonelli-Cueto" />
     <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="es_ES" />
     <meta property="og:url" content="https://tonellicueto.xyz/research.html" />
-    <meta property="og:title" content="Josué Tonelli-Cueto: Research" /><!--35char-->
+    <meta property="og:title" content="Josu&eacute; Tonelli-Cueto: Research" /><!--35char-->
     <meta property="og:description" content="Research interests and academic publications"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM4.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--Twitter metadata-->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@tonellicueto" />
     <meta name="twitter:creator" content="@tonellicueto" />
-    <meta name="twitter:title" content="Josué Tonelli-Cueto: Research" />
-    <meta name="twitter:description" content="Research interests and academic publications of Josué Tonelli-Cueto." />
+    <meta name="twitter:title" content="Josu&eacute; Tonelli-Cueto: Research" />
+    <meta name="twitter:description" content="Research interests and academic publications of Josu&eacute; Tonelli-Cueto." />
     <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/SM4.jpg" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -39,7 +39,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png"/></a>
+      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png" alt="weblogo"/></a>
 
       <div class="collapse navbar-collapse " id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
@@ -100,11 +100,11 @@
 
     <!--  Main jumbotron for a primary marketing message or call to action  -->
 
-<div class="jumbotron">
+<div class="jumbotron" style="text-align:center;">
       <div class="container">
-        <center>
-        <h2 class="display-4">Research</h2>of<h2 class="display-4">Josué Tonelli-Cueto</h2>
-        </center>
+        
+        <h2 class="display-4">Research</h2>of<h2 class="display-4">Josu&eacute; Tonelli-Cueto</h2>
+        
      </div>
 </div>
 
@@ -199,24 +199,24 @@
 
   <br/><div class="cv">
   <div class="year"><h4>2023</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<br/>&emsp;I: Univariate Polynomials and Hypersurfaces<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
-   <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto and E. Tsigaridas. Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces, <i>Journal of Symbolic Computation</i>, 115:142-173, 2023. First on-line: August 2022. <span><a href="https://doi.org/10.1016/j.jsc.2022.08.013">DOI 10.1016/j.jsc.2022.08.013</a></div>
+   <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto and E. Tsigaridas. Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces, <i>Journal of Symbolic Computation</i>, 115:142-173, 2023. First on-line: August 2022. <span><a href="https://doi.org/10.1016/j.jsc.2022.08.013">DOI 10.1016/j.jsc.2022.08.013</a></span></div>
    <div class="pretalktitle"></div><div class="collaborator">Journal version of <em>Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</em> in the Special Issue of ISSAC'20.</div>
   </div>
 
   <br/><div class="cv">
   <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
-   <div class="pretalktitle"></div><div class="collaborator">A.A. Ergür, F. Cucker and J. Tonelli-Cueto. On the Complexity of the Plantinga-Vegter Algorithm, <i>Discrete & Computational Geometry</i>, 2022. <!--First on-line: January 2021.--> <span><a href="https://doi.org/10.1007/s00454-022-00403-x">DOI 10.1007/s00454-022-00403-x</a></span> <span><a style="color:#FF69B4;" href="https://rdcu.be/cUAbS">[SharedIt LINK]</a></span></div>
+   <div class="pretalktitle"></div><div class="collaborator">A.A. Erg&uuml;r, F. Cucker and J. Tonelli-Cueto. On the Complexity of the Plantinga-Vegter Algorithm, <i>Discrete & Computational Geometry</i>, 2022. <!--First on-line: January 2021.--> <span><a href="https://doi.org/10.1007/s00454-022-00403-x">DOI 10.1007/s00454-022-00403-x</a></span> <span><a style="color:#FF69B4;" href="https://rdcu.be/cUAbS">[SharedIt LINK]</a></span></div>
    <div class="pretalktitle"></div><div class="collaborator">Journal version of <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
   </div>
 
   <br/><div class="cv">
   <div class="year"><h4>2021</h4></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. II: General Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1903.10710" role="button">arXiv:1903.10710</a></h4></div>
-   <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. II: General Formulas, <i>Foundations of Computational Mathematics</i>, 21(5):1279–1316, 2021. First on-line: January 2021. <span><a href="https://doi.org/10.1007/s10208-020-09483-8">DOI 10.1007/s10208-020-09483-8</a></span> <span><a style="color:#FF69B4;" href="https://rdcu.be/cc3Eq">[SharedIt LINK]</a></span></div>
+   <div class="pretalktitle"></div><div class="collaborator">P. B&uuml;rgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. II: General Formulas, <i>Foundations of Computational Mathematics</i>, 21(5):1279–1316, 2021. First on-line: January 2021. <span><a href="https://doi.org/10.1007/s10208-020-09483-8">DOI 10.1007/s10208-020-09483-8</a></span> <span><a style="color:#FF69B4;" href="https://rdcu.be/cc3Eq">[SharedIt LINK]</a></span></div>
   </div>
 
   <br/><div class="cv">
   <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. I: Lax Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1807.06435"  role="button">arXiv:1807.06435</a></h4></div>
-   <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. I: Lax Formulas, <i>Foundations of Computational Mathematics</i>, 20(1):71-119, 2020. First on-line: May 2019. <span><a href="https://doi.org/10.1007/s10208-019-09418-y">DOI 10.1007/s10208-019-09418-y</a></span> <span><a style="color:#FF69B4;" href="https://rdcu.be/cc68T">[SharedIt LINK]</a></span></div>
+   <div class="pretalktitle"></div><div class="collaborator">P. B&uuml;rgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. I: Lax Formulas, <i>Foundations of Computational Mathematics</i>, 20(1):71-119, 2020. First on-line: May 2019. <span><a href="https://doi.org/10.1007/s10208-019-09418-y">DOI 10.1007/s10208-019-09418-y</a></span> <span><a style="color:#FF69B4;" href="https://rdcu.be/cc68T">[SharedIt LINK]</a></span></div>
   </div>
 
   <br/><div class="cv">
@@ -276,7 +276,7 @@
 
 <footer>
 <hr>
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josué Tonelli-Cueto
+    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
         <span id="finalsentence" style="float:right;"> Code of the webpage created through the art of copying, pasting, editing and crossing fingers&emsp;&emsp;</span></p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
